tests/test-dirs/upstream-typing-recovery/original-tests/modules_not_allowed.compilers.reference
File "modules_not_allowed.ml", line 1:
Error: Multiple errors were encountered
File "modules_not_allowed.ml", line 10, characters 4-14:
10 | let (module M) = 0
         ^^^^^^^^^^
  Modules are not allowed in this pattern.
File "modules_not_allowed.ml", line 17, characters 10-21:
17 |       let (module Ob) = m in
               ^^^^^^^^^^^
  Modules are not allowed in this pattern.
File "modules_not_allowed.ml", line 17, characters 24-25:
17 |       let (module Ob) = m in
                             ^
  Unbound value m
File "modules_not_allowed.ml", line 22, characters 14-18:
22 | let t : int = true
                   ^^^^
  This expression should not be a boolean literal, the expected type is int
